--- a/BasketScore/BasketScore.vcxproj
+++ b/BasketScore/BasketScore.vcxproj
@@ -120,11 +120,13 @@
   <ItemGroup>
     <ClCompile Include="FileHandler.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="PlayersInfo.c" />
     <ClCompile Include="UserInterface.c" />
     <ClCompile Include="UserInterface.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileHandler.h" />
+    <ClInclude Include="PlayersInfo.h" />
     <ClInclude Include="Players.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
