--- a/BasketScore/BasketScore.vcxproj
+++ b/BasketScore/BasketScore.vcxproj
@@ -131,7 +131,7 @@
     <ClCompile Include="Players.c" />
     <ClCompile Include="PlayersInfo.c" />
     <ClCompile Include="UserInterface.c" />
-    <ClCompile Include="UserInterface.h" />
+    <ClCompile Include="VarInput.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdvanceIndicators.h" />
@@ -140,7 +140,9 @@
     <ClInclude Include="Players.h" />
     <ClInclude Include="PlayersInfo.h" />
     <ClInclude Include="PlayersPerformanceInfo.h" />
+	<ClInclude Include="UserInterface.h" />
     <ClInclude Include="Games.h" />
+    <ClInclude Include="VarInput.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="games_1.csv" />
