--- a/BasketScore/BasketScore.vcxproj.filters
+++ b/BasketScore/BasketScore.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="AdvanceIndicators.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VarInput.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileHandler.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AdvanceIndicators.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VarInput.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
