--- a/BasketScore/BasketScore.vcxproj
+++ b/BasketScore/BasketScore.vcxproj
@@ -122,34 +122,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AdvanceIndicators.c" />
+    <ClCompile Include="Commands.c" />
     <ClCompile Include="FileHandler.c" />
     <ClCompile Include="GamesInfo.c" />
-    <ClCompile Include="PlayersPerformanceInfo.c" />
+    <ClCompile Include="list.c" />
+    <ClCompile Include="list.h" />
+    <ClCompile Include="listElem.c" />
     <ClCompile Include="Games.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="Players.c" />
-    <ClCompile Include="PlayersInfo.c" />
     <ClCompile Include="UserInterface.c" />
     <ClCompile Include="VarInput.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AdvanceIndicators.h" />
+    <ClInclude Include="Commands.h" />
     <ClInclude Include="FileHandler.h" />
     <ClInclude Include="GamesInfo.h" />
+    <ClInclude Include="listElem.h" />
     <ClInclude Include="Players.h" />
-    <ClInclude Include="PlayersInfo.h" />
-    <ClInclude Include="PlayersPerformanceInfo.h" />
-	<ClInclude Include="UserInterface.h" />
+    <ClInclude Include="UserInterface.h" />
     <ClInclude Include="Games.h" />
     <ClInclude Include="VarInput.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="games_1.csv" />
-    <None Include="players_1.csv" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="results_1.txt" />
+    <None Include="games.csv" />
+    <None Include="players.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
